cfn-template.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: |
  The Roman Numerals Converter Application, converts the given number to the Roman numerals. 
  The application is coded in Python and deployed as a web application with Flask on AWS Elastic Compute Cloud (EC2)
  Instance using AWS Cloudformation and CLI Services.

Parameters:
  myKeyName:
    Description: Select your key pair
    Type: AWS::EC2::KeyPair::KeyName

  imageID:
    Type: "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>"
    Default: "/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64"

Resources:
  myWebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref imageID
      InstanceType: t2.micro
      KeyName: !Ref myKeyName
      SecurityGroupIds:
        - !Ref mySecGrp
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}
      UserData: !Base64 |
        #!/bin/bash
        dnf update -y
        dnf install python3 -y 
        dnf install python3-pip -y
        pip3 install flask==2.3.3
        cd /home/ec2-user
        chmod -R 777 /home/ec2-user
        mkdir templates && cd templates
        wget https://raw.githubusercontent.com/saityildirim/roman-numerals-convertor/main/templates/index.html 
        wget https://raw.githubusercontent.com/saityildirim/roman-numerals-convertor/main/templates/result.html
        cd ..
        wget https://raw.githubusercontent.com/saityildirim/roman-numerals-convertor/main/roman-numerals-converter-app.py
        /bin/python3 /home/ec2-user/roman-numerals-converter-app.py

  mySecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SSH and HTTP # Required
      GroupName: roman-numerals-converter
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0

Outputs:
  webSiteURL:
    Description: URL of website
    Value: !Sub
      - http://${PublicDNS}
      - PublicDNS: !GetAtt myWebServer.PublicDnsName
